# Ncurses-LC3-Simulator

./: .gitignore  CMakeLists.txt  Error.c  LC3.c  LC3Simulator  LC3_OS.asm  LC3_OS.hex  LC3_OS.sym  Makefile  README.md  TODO.md  TODO.txt  build.sh  main.c  tags
Examples/: Compare.asm  Fibonacci.asm  Recursive_Fibonacci.asm
includes/: Argparse.h  Enums.h  Error.h  Keyboard.h  LC3.h  Logging.h  Machine.h  Memory.h  OptParse.h  Parser.h  Simulator.h  Structs.h  Token.h  parser.h
source/: Argparse.c  Error.c  LC3.c  Logging.c  Machine.c  Main.c  Memory.c  OptParse.c  Parser.c  Simulator.c  main.c
